--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,6 @@ jobs:
         with: 
           python-version: 3.12
 
-      
       - name: create venv
         run: |
           python -m venv venv
@@ -29,6 +28,27 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: setup python
+        uses: actions/setup-python@v2
+        with: 
+          python-version: 3.12
+
+      - name: create venv
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
