--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: run tests
+        run: |
+          python -m unittest test_app.py
+
   deploy:
     runs-on: ubuntu-latest
 
