--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,30 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+  test:
+    needs: build
+
+    runs-on: ubuntu-latest
+
+    steps: 
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: setup python
+        uses: actions/setup-python@v2
+        with: 
+          python-version: 3.12
+
+      - name: create venv
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: run tests
         run: |
           python -m unittest test_app.py
